force-app/main/default/objects/Account/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-800Accountant_api</fullName>
                <label>1-800accountant_api</label>
            </value>
            <value>
                <fullName>adagility</fullName>
            </value>
            <value>
                <fullName>Added by Accountant</fullName>
            </value>
            <value>
                <fullName>Added by Client</fullName>
            </value>
            <value>
                <fullName>adwords</fullName>
            </value>
            <value>
                <fullName>adwords_display</fullName>
            </value>
            <value>
                <fullName>adwords_gusto</fullName>
            </value>
            <value>
                <fullName>Alternative Contact</fullName>
            </value>
            <value>
                <fullName>API Partner</fullName>
            </value>
            <value>
                <fullName>App-Generated</fullName>
            </value>
            <value>
                <fullName>bing</fullName>
            </value>
            <value>
                <fullName>bing_gusto</fullName>
            </value>
            <value>
                <fullName>bingads</fullName>
            </value>
            <value>
                <fullName>blog</fullName>
            </value>
            <value>
                <fullName>busybusy_api</fullName>
            </value>
            <value>
                <fullName>Capterra</fullName>
            </value>
            <value>
                <fullName>cleancloud_api</fullName>
            </value>
            <value>
                <fullName>clover_native_api</fullName>
            </value>
            <value>
                <fullName>clover-gusto</fullName>
            </value>
            <value>
                <fullName>collective_api</fullName>
            </value>
            <value>
                <fullName>CPA Practice Advisor 3rd Party</fullName>
            </value>
            <value>
                <fullName>Data Sourcing</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Direct Signup</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>facebookpro</fullName>
            </value>
            <value>
                <fullName>facebookrmkt</fullName>
            </value>
            <value>
                <fullName>fitsmallbusiness</fullName>
            </value>
            <value>
                <fullName>freshbooks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>