force-app/main/default/objects/Account/fields/Managing_Partner_Tier__c.field-meta.xml
<CustomField>
    <fullName>Managing_Partner_Tier__c</fullName>
    <description>Managing_Partner_Tier__c</description>
    <formula>TEXT(Sold_By__r.AM_Tier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Managing Partner Tier</label>
    <type>Text</type>
</CustomField>