force-app/main/default/objects/Account/fields/Medical_Deductions__c.field-meta.xml
<CustomField>
    <fullName>Medical_Deductions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has medical deduction visible from payroll. API.</description>
    <inlineHelpText>Deductions entered in app (Gusto-managed or externally managed)</inlineHelpText>
    <label>Has Medical Benefit Deductions?</label>
    <type>Checkbox</type>
</CustomField>