force-app/main/default/objects/Account/fields/Medical_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Medical_Renewal_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Medical Renewal Date</label>
    <type>Date</type>
</CustomField>