force-app/main/default/objects/Account/fields/mk_BoR_Fit_Score__c.field-meta.xml
<CustomField>
    <fullName>mk_BoR_Fit_Score__c</fullName>
    <label>BoR Fit Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>