force-app/main/default/objects/Account/fields/mk_PR_fit_score__c.field-meta.xml
<CustomField>
    <fullName>mk_PR_fit_score__c</fullName>
    <label>PR Fit Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>