force-app/main/default/objects/Account/fields/MK_PR_Rating__c.field-meta.xml
<CustomField>
    <fullName>MK_PR_Rating__c</fullName>
    <label>MK PR Rating</label>
    <length>50</length>
    <type>Text</type>
</CustomField>