force-app/main/default/objects/Account/fields/MQL_Date__c.field-meta.xml
<CustomField>
    <fullName>MQL_Date__c</fullName>
    <description>Gets MQL Date value from Lead Conversion.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MQL Date</label>
    <type>Date</type>
</CustomField>