force-app/main/default/objects/Account/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <description>Created for Ardius.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Steps</label>
    <type>TextArea</type>
</CustomField>