force-app/main/default/objects/Account/fields/No_of_Clients__c.field-meta.xml
<CustomField>
    <fullName>No_of_Clients__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Firm’s total number of Business Clients. 
Business Clients NOT = Individuals</description>
    <inlineHelpText>Firm’s total number of Business Clients. 

Business Clients NOT = individuals</inlineHelpText>
    <label>Total Business Clients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>