force-app/main/default/objects/Account/fields/No_Of_Closed_Lost_Referred_By__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Closed_Lost_Referred_By__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Calculates total number of Closed Lost opportunities based on Referred By.</description>
    <label># Of Closed Lost (Referred By)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>