force-app/main/default/objects/Account/fields/No_of_EEs_in_HI_State__c.field-meta.xml
<CustomField>
    <fullName>No_of_EEs_in_HI_State__c</fullName>
    <description>Total number of active employees that are in an HI-eligible state</description>
    <inlineHelpText>Total number of active employees that are in an HI-eligible state</inlineHelpText>
    <label>No. of EEs in HI State</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>