force-app/main/default/objects/Account/fields/No_Of_Employees_Filling_State__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Employees_Filling_State__c</fullName>
    <description>Total number of active employees in the company&apos;s filing state</description>
    <inlineHelpText>Total number of active employees in the company&apos;s filing state</inlineHelpText>
    <label># Of Employees - Filing State</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>