force-app/main/default/objects/Account/fields/Normalized_Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Email_Domain__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Normalized Email Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>