force-app/main/default/objects/Account/fields/Normalized_Phone__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Phone__c</fullName>
    <description>Contains normalized value of Phone field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Normalized Phone</label>
    <length>15</length>
    <type>Text</type>
</CustomField>