force-app/main/default/objects/Account/fields/Normalized_Shipping_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Shipping_Postal_Code__c</fullName>
    <label>Normalized Shipping Postal Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>