force-app/main/default/objects/Account/fields/Num_Clients_Tier_Basic__c.field-meta.xml
<CustomField>
    <fullName>Num_Clients_Tier_Basic__c</fullName>
    <label># of Clients - Tier - Basic</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>