force-app/main/default/objects/Account/fields/Number_of_Active_Contractors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Active_Contractors__c</fullName>
    <inlineHelpText>The current number of contractors. Does not include employees.</inlineHelpText>
    <label>Number of Active Contractors</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>