force-app/main/default/objects/Account/fields/Number_Of_Open_Payroll_Opps_Referred_By__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Open_Payroll_Opps_Referred_By__c</fullName>
    <description>Calculates number of Open payroll opportunities based on referred by on Account.</description>
    <label># Of Open Payroll Opps(Referred By)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>