force-app/main/default/objects/Account/fields/Onboarding_Flow__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Flow__c</fullName>
    <label>Onboarding Flow</label>
    <length>100</length>
    <type>Text</type>
</CustomField>