force-app/main/default/objects/Account/fields/Onboarding_Survey_Best_Time_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Survey_Best_Time_To_Contact__c</fullName>
    <description>Field is used to identify Onboarding Survey Best Time to Contact from Panda onboarding process.</description>
    <label>Onboarding Survey Best Time To Contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AFTER_FIRST_PAYROLL</fullName>
                <label>After First Payroll</label>
            </value>
            <value>
                <fullName>ASAP</fullName>
            </value>
            <value>
                <fullName>LATER</fullName>
                <label>Later</label>
            </value>
            <value>
                <fullName>NEAR_RENEWAL_DATE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>