force-app/main/default/objects/Account/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Applicant Tracking System</fullName>
            </value>
            <value>
                <fullName>App Store</fullName>
            </value>
            <value>
                <fullName>Back-End Integration</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Benefit Administration</fullName>
            </value>
            <value>
                <fullName>Billing &amp; Invoicing</fullName>
            </value>
            <value>
                <fullName>Booking Software</fullName>
            </value>
            <value>
                <fullName>Business Consultant</fullName>
            </value>
            <value>
                <fullName>Cable Company</fullName>
            </value>
            <value>
                <fullName>Co-Working Space</fullName>
            </value>
            <value>
                <fullName>Domain Registration</fullName>
            </value>
            <value>
                <fullName>Employer Services</fullName>
            </value>
            <value>
                <fullName>ERP</fullName>
            </value>
            <value>
                <fullName>Expense Management</fullName>
            </value>
            <value>
                <fullName>Field Service Automation</fullName>
            </value>
            <value>
                <fullName>Financial Lending</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>HR Compliance</fullName>
            </value>
            <value>
                <fullName>HRIS</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Incubator/Accelerator</fullName>
            </value>
            <value>
                <fullName>Insurance Broker</fullName>
            </value>
            <value>
                <fullName>Investor/Venture Capital</fullName>
            </value>
            <value>
                <fullName>IT Vendor</fullName>
            </value>
            <value>
                <fullName>Labor Marketplace</fullName>
            </value>
            <value>
                <fullName>Legal Services</fullName>
            </value>
            <value>
                <fullName>Merchant Services</fullName>
            </value>
            <value>
                <fullName>Modern Service Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>