force-app/main/default/objects/Account/fields/Payroll_Opp_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Opp_Owner_Role__c</fullName>
    <description>Payroll Opportunity Owner Role for Distribution Engine</description>
    <label>Payroll Opp Owner Role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>