force-app/main/default/objects/Account/fields/Payroll_Schedule_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Schedule_Completed_Date__c</fullName>
    <description>Roll up Summary. This is a read-only field sourced from the Opportunity object and used in Qualified for sales chat routing</description>
    <inlineHelpText>This is a read-only field sourced from the Opportunity object and used in Qualified for sales chat routing.</inlineHelpText>
    <label>Payroll Schedule Completed Date</label>
    <summarizedField>Opportunity.Payroll_Schedule_Completed_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Payroll_Schedule_Completed_Date__c</field>
        <operation>notEqual</operation>
        <value />
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>