force-app/main/default/objects/Account/fields/PD_Firm_Size__c.field-meta.xml
<CustomField>
    <fullName>PD_Firm_Size__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PD Firm Size</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>