force-app/main/default/objects/Account/fields/PD_Is_Accepting_Remote_Clients__c.field-meta.xml
<CustomField>
    <fullName>PD_Is_Accepting_Remote_Clients__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PD Is Accepting Remote Clients</label>
    <type>Checkbox</type>
</CustomField>