force-app/main/default/objects/Account/fields/PD_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>PD_Member_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PD Member Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>