force-app/main/default/objects/Account/fields/PD_Membership_Date__c.field-meta.xml
<CustomField>
    <fullName>PD_Membership_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PD Membership Date</label>
    <type>Date</type>
</CustomField>