force-app/main/default/objects/Account/fields/PD_Software_Used__c.field-meta.xml
<CustomField>
    <fullName>PD_Software_Used__c</fullName>
    <label>PD Software Used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aplos</fullName>
            </value>
            <value>
                <fullName>Boomr</fullName>
            </value>
            <value>
                <fullName>Deputy</fullName>
            </value>
            <value>
                <fullName>eBility Time Tracker</fullName>
            </value>
            <value>
                <fullName>Expensify</fullName>
            </value>
            <value>
                <fullName>Firm Proprietary Software</fullName>
            </value>
            <value>
                <fullName>Freshbooks</fullName>
            </value>
            <value>
                <fullName>Homebase</fullName>
            </value>
            <value>
                <fullName>Quickbooks Desktop</fullName>
            </value>
            <value>
                <fullName>Quickbooks Online</fullName>
            </value>
            <value>
                <fullName>Receipt Bank</fullName>
            </value>
            <value>
                <fullName>TSheets</fullName>
            </value>
            <value>
                <fullName>When I Work</fullName>
            </value>
            <value>
                <fullName>Ximble</fullName>
            </value>
            <value>
                <fullName>Xero</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>