force-app/main/default/objects/Account/fields/Percentage_Accountants_Alumni__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Accountants_Alumni__c</fullName>
    <description>Number of Alumni out of Total Accountant contacts on an account</description>
    <label>% Accountants Alumni</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>