force-app/main/default/objects/Account/fields/Possible_Duplicate_Account__c.field-meta.xml
<CustomField>
    <fullName>Possible_Duplicate_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Possible Duplicate Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Possible Duplicate Account)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>