force-app/main/default/objects/Account/fields/Pricing__c.field-meta.xml
<CustomField>
    <fullName>Pricing__c</fullName>
    <defaultValue>$Setup.Tier_Config__c.New_Price_1__c</defaultValue>
    <label>Pricing</label>
    <length>80</length>
    <type>Text</type>
</CustomField>