force-app/main/default/objects/Account/fields/Priority_Support__c.field-meta.xml
<CustomField>
    <fullName>Priority_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the account has subscribed to Plus Tier (Tier 2) Priority Support and HR Services.</description>
    <label>Priority Support and HR Services</label>
    <type>Checkbox</type>
</CustomField>