force-app/main/default/objects/Account/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <description>Field is used to indicate product interest from in app or Salesforce.</description>
    <inlineHelpText>Field is used to indicate product interest from in app or Salesforce.</inlineHelpText>
    <label>Product Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>international_contractor_payment_add_IC</fullName>
                <label>International Contractor Payment Add IC</label>
            </value>
            <value>
                <fullName>international_contractor_payment_landing_page</fullName>
                <label>International Contractor Payment Landing Page</label>
            </value>
            <value>
                <fullName>international_contractor_payment_logacall</fullName>
                <label>International Contractor Payment - Log a call</label>
            </value>
            <value>
                <fullName>international_contractor_payment_onboarded</fullName>
                <label>International Contractor Payment Onboarded</label>
            </value>
            <value>
                <fullName>international_contractor_payment_onboarding</fullName>
                <label>International Contractor Payment Onboarding</label>
            </value>
            <value>
                <fullName>international_contractor_payment_paid</fullName>
                <label>International Contractor Payment Paid</label>
            </value>
            <value>
                <fullName>international_payroll_add_iee</fullName>
                <label>International Payroll - Add IEE</label>
            </value>
            <value>
                <fullName>international_payroll_landing_page</fullName>
                <label>International Payroll - Landing Page</label>
            </value>
            <value>
                <fullName>international_payroll_landing_page_consent</fullName>
                <label>International Payroll - Landing Page Consent</label>
            </value>
            <value>
                <fullName>international_payroll_logacall</fullName>
                <label>International Payroll - Log a Call</label>
            </value>
            <value>
                <fullName>international_payroll_onboarding</fullName>
                <label>International Payroll - Onboarding</label>
            </value>
            <value>
                <fullName>premium_tier_logacall</fullName>
                <label>Premium Tier - Log a Call</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>