force-app/main/default/objects/Account/fields/Qualtrics_Response_2__c.field-meta.xml
<CustomField>
    <fullName>Qualtrics_Response_2__c</fullName>
    <description>Created for qualtrics integration.</description>
    <label>Qualtrics Response 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>