force-app/main/default/objects/Account/fields/Ramp_Intent__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Intent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ramp Intent</label>
    <type>Checkbox</type>
</CustomField>