force-app/main/default/objects/Account/fields/Random_Cohort__c.field-meta.xml
<CustomField>
    <fullName>Random_Cohort__c</fullName>
    <description>Populated round robin with integers 1-10 as a means of creating random cohorts for accounts.  See Jira: BT-10190</description>
    <label>Random Cohort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>