force-app/main/default/objects/Account/fields/Reseller_Company__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The field is populated when Account Firm runs payroll for its own company.</description>
    <label>Reseller Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Reseller Company)</relationshipLabel>
    <relationshipName>ResellerCompany</relationshipName>
    <type>Lookup</type>
</CustomField>