force-app/main/default/objects/Account/fields/Reseller_Type__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Type__c</fullName>
    <description>Reseller Type</description>
    <label>Reseller Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Strategic Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>