force-app/main/default/objects/Account/fields/Resident_States__c.field-meta.xml
<CustomField>
    <fullName>Resident_States__c</fullName>
    <label>Resident State(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_Abbreviations</valueSetName>
    </valueSet>
</CustomField>