force-app/main/default/objects/Account/fields/Retrieval_Date__c.field-meta.xml
<CustomField>
    <fullName>Retrieval_Date__c</fullName>
    <description>Field for RevOps to populate retrieval date when using gradient for bookeeping</description>
    <label>Retrieval Date</label>
    <type>Date</type>
</CustomField>