force-app/main/default/objects/Account/fields/Risk_Flag__c.field-meta.xml
<CustomField>
    <fullName>Risk_Flag__c</fullName>
    <label>Risk Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low Risk</fullName>
            </value>
            <value>
                <fullName>High Risk</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Fraud Action Required</fullName>
            </value>
            <value>
                <fullName>Auto Approved</fullName>
            </value>
            <value>
                <fullName>ATO Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>