force-app/main/default/objects/Account/fields/SAL_to_First_Client_Add__c.field-meta.xml
<CustomField>
    <fullName>SAL_to_First_Client_Add__c</fullName>
    <description>Calculates number of days between Reseller Account going to SAL and when first company is added.</description>
    <label>SAL to First Client Add</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>