force-app/main/default/objects/Account/fields/Sales_Engagement_Status__c.field-meta.xml
<CustomField>
    <fullName>Sales_Engagement_Status__c</fullName>
    <description>Populates only for Reseller RT.
Prospective = Populates on account creation.
Active = Populates when cohort date is not null
Churned = Populates when number of Active Clients goes from &gt;0 to 0 and previous status was Active.
Unqualified = Populates when firm has been merged using the merge tool or domain name matches an existing account.</description>
    <inlineHelpText>Prospective - new firm that has not run any clients’ payroll through Gusto
Active - currently is managing at least one client on Gusto
Churned - no longer managing any clients on Gusto
Unqualified - duplicate or bad data</inlineHelpText>
    <label>Sales Engagement Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>False SAL</fullName>
                <default>true</default>
                <label>False SAL</label>
            </value>
            <value>
                <fullName>Working SAL</fullName>
            </value>
            <value>
                <fullName>Ramp</fullName>
            </value>
            <value>
                <fullName>Grow</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Unqualified</fullName>
            </value>
            <value>
                <fullName>Prospective</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Churned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>