force-app/main/default/objects/Account/fields/SDR_Notes__c.field-meta.xml
<CustomField>
    <fullName>SDR_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SDR Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>