force-app/main/default/objects/Account/fields/Send_Company_Suspension_to_Partner__c.field-meta.xml
<CustomField>
    <fullName>Send_Company_Suspension_to_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will be used to identify &quot;Suspended&quot; accounts related to partner team - and slack notification to be send in &quot;partner-nps-and-churn-notifications&quot; channel.</description>
    <label>Send Company Suspension to Partner</label>
    <type>Checkbox</type>
</CustomField>