force-app/main/default/objects/Account/fields/Served_Other_Rules__c.field-meta.xml
<CustomField>
    <fullName>Served_Other_Rules__c</fullName>
    <description>This field displays the specific rules within a rule set that  were valid when the record was served to the user.</description>
    <inlineHelpText>This field displays the specific rules within a rule set that  were valid when the record was served to the user.</inlineHelpText>
    <label>Served Other Rules</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Greeter - SBOB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>