force-app/main/default/objects/Account/fields/Served_Up_Rule__c.field-meta.xml
<CustomField>
    <fullName>Served_Up_Rule__c</fullName>
    <description>This field displays the specific rule within a rule set that  caused the record to be displayed to the user to be acted upon.</description>
    <inlineHelpText>This field displays the specific rule within a rule set that  caused the record to be displayed to the user to be acted upon.</inlineHelpText>
    <label>Served Up Rule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Greeter -- SBOB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>