force-app/main/default/objects/Account/fields/Skip_Validation_For_Routing__c.field-meta.xml
<CustomField>
    <fullName>Skip_Validation_For_Routing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Validation For Routing</label>
    <type>Checkbox</type>
</CustomField>