force-app/main/default/objects/Account/fields/Sold_By__c.field-meta.xml
<CustomField>
    <fullName>Sold_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sold Accounts</relationshipLabel>
    <relationshipName>SoldByAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>