force-app/main/default/objects/Account/fields/Sold_By_Partner_Tier__c.field-meta.xml
<CustomField>
    <fullName>Sold_By_Partner_Tier__c</fullName>
    <description>This is used in reports to tell if the account is managed by a Gold/Silver Partner</description>
    <formula>TEXT( Sold_By__r.AM_Tier__c )</formula>
    <label>Sold By Partner Tier</label>
    <type>Text</type>
</CustomField>