force-app/main/default/objects/Account/fields/System_Of_Origin__c.field-meta.xml
<CustomField>
    <fullName>System_Of_Origin__c</fullName>
    <label>System Of Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GFS</fullName>
            </value>
            <value>
                <fullName>Drift</fullName>
            </value>
            <value>
                <fullName>Marketo</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Intercom</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>