force-app/main/default/objects/Account/fields/Technical_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Technical_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A field to indicate the assigned TAM on an account</description>
    <label>Technical Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>